<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.invisionapp.polisiku.SubHomeActivity">

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorBlackGrey"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/telephone1"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/telephone1sub"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearInternet"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorBlack"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_headset_mic_white"
                />
        </LinearLayout>

    </LinearLayout>


    <LinearLayout
        android:id="@+id/linear2"
        android:layout_below="@+id/linear1"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorBlackGrey2"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/telephone2"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/telephone2sub"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearVideo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorBlack2"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_videocam_white"
                />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear3"
        android:layout_below="@+id/linear2"
        android:layout_width="match_parent"
        android:weightSum="3"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:background="@color/colorBlackGrey3"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/telephone3"
                android:textSize="18sp"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                android:textColor="@android:color/white" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/telephone3sub"
                android:gravity="center"
                android:layout_marginBottom="10dp"
                android:textColor="@android:color/white"
                android:textSize="10sp"
                tools:ignore="SmallSp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearTelephone"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorBlack3"
            android:gravity="center"
            android:layout_weight="1">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_phone_white"
                />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>